--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@nuxt/eslint": "^0.6.0",
     "nuxt": "^3.13.2",
+    "sass": "^1.80.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
